plugins {
	id 'fabric-loom' version '1.15-SNAPSHOT' apply false
}

subprojects {
    apply plugin: "fabric-loom"

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings loom.layered() {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${rootProject.parchment_version}@zip")
        }

        modImplementation "net.fabricmc:fabric-loader:${rootProject.loader_version}"
    }
}

allprojects {
    apply plugin: "java"

    version = rootProject.mod_version
    group = rootProject.maven_group

    repositories {
        maven {
            name 'ParchmentMC'
            url 'https://maven.parchmentmc.org'
        }
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    jar {
        from("LICENSE") {
            rename { "${it}_${rootProject.archivesBaseName}" }
        }
    }
}